--- a/blog.html
+++ b/blog.html
@@ -4,10 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/69796d1894.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
     <title>World Cup</title>
 </head>
 <body>
     <!-- Top Header -->
-    
+    <section class="header-container">
+        <div class="inner-header">
+            <div class="web-title">
+                <h1>The Greatest Show On The Earth</h1>
+                <p>Soccer is a great game, and the rich variety of styles and passions that come with being truly global makes the World Cup a nonpareil event in the universe of competitive sport.</p>
+                <a href="">Watch Live <i class="fa-solid fa-play"></i></a>
+            </div>
+            <div class="header-img">
+                <img src="images/neymar.png" alt="neymar">
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
