--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <title>World Cup</title>
 </head>
 <body>
@@ -20,7 +21,7 @@
                 <a href="">Watch Live <i class="fa-solid fa-play"></i></a>
             </div>
             <div class="header-img">
-                <img src="images/neymar.png" alt="neymar">
+                <img src="images/Marcelo Image.png" alt="marcelo">
             </div>
         </div>
 
