--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,18 @@
                 <a href="">Watch Live <i class="fa-solid fa-play"></i></a>
             </div>
             <div class="header-img">
-                <img src="images/Marcelo Image.png" alt="marcelo">
+                <img id="top-img" src="images/Marcelo Image.png" alt="marcelo">
+            </div>
+        </div>
+
+    </section>
+
+    <section class="middle-container">
+        <div class="mid-inner">
+            <div class="menue">
+                <a href="">Upcoming Matches</a>
+                <a href="">All Group</a>
+                <a href="">Blog</a>
             </div>
         </div>
 
