--- a/blog.html
+++ b/blog.html
@@ -30,9 +30,9 @@
     <section class="middle-container">
         <div class="mid-inner">
             <div class="menue">
-                <a href="">Upcoming Matches</a>
-                <a href="">All Group</a>
-                <a href="">Blog</a>
+                <a class="menue-items"  href="">Upcoming Matches</a>
+                <a class="menue-items" href="">All Groups</a>
+                <a class="menue-items" href="">Blog</a>
             </div>
         </div>
 
