font-awesome added

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,101 @@
             </div>
         </div>
 
+        <div class="blogs">
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            <div class="blog">
+                <div class="top-blog"><img src="images/blog-pic.png" alt=""></div>
+                <div class="blog-content">
+                    <a href="">Transfer</a>
+                    <h3 style="font-size:18px;">Transfer Live: Chlesea in talks over Kimpembe transfer</h3>
+                    <p><i class="fa-solid fa-clock"></i>  10hr <span> <i class="fa-solid fa-message"></i>   25</span></p>
+                </div>
+            </div>
+            
+            
+        </div>
+
+    </section>
+
+    <section>
+        <footer>
+            <header>
+                <h1>Goal</h1>
+            </header>
+            <hr>
+            <div class="last">
+                <a href="">Contact Us</a>
+                <a href="">Terms Of Services</a>
+                <a href="">Privacy Policy</a>
+                <a href="">Privacy Setting</a>
+                <a href="">Goal App</a>
+                <a href="">Goal Live</a>
+            </div>
+            <h3><i class="fa-brands fa-facebook"></i> <span><i class="fa-brands fa-github"></i></span> <i class="fa-brands fa-youtube"></i> </h3>
+        </footer>
     </section>
 
 </body>
