--- a/blog.html
+++ b/blog.html
@@ -115,7 +115,7 @@
 
     </section>
 
-    <section>
+    <section class="footer">
         <footer>
             <header>
                 <h1>Goal</h1>
