--- a/upcomingmatch.html
+++ b/upcomingmatch.html
@@ -105,13 +105,17 @@
             
         </div>
 
+        <section class="extra">
+            <button class="extra-button">More</button>
+        </section>
+
     </section>
 
     <section class="footer">
         <footer>
-            <header>
+            <div>
                 <h1>Goal</h1>
-            </header>
+            </div>
             <hr>
             <div class="last">
                 <a href="">Contact Us</a>
@@ -121,7 +125,12 @@
                 <a href="">Goal App</a>
                 <a href="">Goal Live</a>
             </div>
-            <h3><i class="fa-brands fa-facebook"></i> <span><i class="fa-brands fa-github"></i></span> <i class="fa-brands fa-youtube"></i> </h3>
+            <h3 class="social"><i class="fa-brands fa-facebook"></i> <span><i class="fa-brands fa-github"></i></span> <i class="fa-brands fa-youtube"></i> </h3>
+
+            <div>
+                <h3 style="color: darkorange;font-size: 15px;letter-spacing: 5px;"> <span>&#128293</span> Developed By <span style="color:crimson">Abdulah Al Taky </span> </h3>
+                <p style="color: white;font-size:10px;letter-spacing:15px;">©JULY-2022</p>
+            </div>
         </footer>
     </section>
 
