group html page added

--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
         <div class="mid-inner">
             <div class="menue">
                 <a class="menue-items" href="upcomingmatch.html">Upcoming Matches</a>
-                <a class="menue-items" href="">All Groups</a>
+                <a class="menue-items" href="group.html">All Groups</a>
                 <a class="menue-items" href="blog.html">Blog</a>
             </div>
         </div>
