resolved index file

--- a/group.html
+++ b/group.html
@@ -37,7 +37,7 @@
             <div class="menue">
                 <a class="menue-items" href="upcomingmatch.html">Upcoming Matches</a>
                 <a class="menue-items" href="group.html">All Groups</a>
-                <a class="menue-items" href="blog.html">Blog</a>
+                <a class="menue-items" href="index.html">Blog</a>
             </div>
         </div>
 
