--- a/group.html
+++ b/group.html
@@ -133,7 +133,7 @@
     <section class="footer">
         <footer>
             <div>
-                <h1>Goal</h1>
+                <h1>Awesome Goal</h1>
             </div>
             <hr>
             <div class="last">
